# diski

./: Cargo.toml  default.nix
src/: main.rs
