[package]
name = "disk_status"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.31"
ksni = "0.3.1"
notify-rust = "4.11.5"
tokio = { version = "1.43.0", features = ["full"] }
zbus = "5.5.0"
zbus_polkit = { version = "5.0.0", default-features = false, features = ["tokio"] }
zbus_systemd = { version = "0.25701.0", features = ["systemd1"] }
